app/assets/app.css
html,
body {
    font-family: 'Roboto', sans-serif;
    font-size: 14px;
    height: 100%;
    margin: 0px;
    padding: 0px;
}


/* Primary content area */

#content {
    overflow: hidden;
}

#content {
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 5px;
}

#content .md-button.contact {
    background-color: transparent;
    border: none;
    width: 48px;
    height: 48px;
    margin: 8px auto 16px 0;
    position: absolute;
    top: 10px;
    right: 40px;
}

#content md-icon.avatar {
    margin-top: 10px;
}

#content .md-button.contact > md-icon {
    fill: black;
    width: 36px;
    height: 36px;
}

md-button.menuBtn > md-icon {
    fill: white;
    width: 24px;
    height: 24px;
}

#content .md-button.contact:active > md-icon {
    background-color: #dadada;
    border-radius: 75%;
    padding: 4px;
    transition: all 100ms ease-out 30ms;
}

#content img {
    display: block;
    height: auto;
    max-width: 500px;
}


/* Utils */

.content-wrapper {
    position: relative;
}


/* Typography support coming in 0.8.0 */

md-toolbar h1 {
    font-size: 1.250em;
    font-weight: 400;
}

.avatar {
    position: relative;
    width: 128px;
    height: 128px;
    border: 1px solid #ddd;
    border-radius: 50%;
    display: inline-block;
    overflow: hidden;
    margin: 0px;
    vertical-align: middle;
    zoom: 0.70;
    transform: translateZ(0);
    -webkit-transform: scale(0.70);
    -moz-transform: scale(0.70);
}

md-bottom-sheet md-icon {
    margin-right: 20px;
}

span.name {
    font-weight: bold;
    font-size: 1.1em;
    padding-left: 5px;
}

svg {
    fill: inherit;
}

.menu-bar {
    height: 100%;
}

div.loginPage {
    height: 100%;
}

div.loginPage md-whiteframe {
    min-height: 40%;
    background-color: white;
}

div.loginPage button.md-primary {
    margin-left: 0px;
    width: 100%;
}

div.loginPage div.secondaryLink {
    width: 100%;
}

div.loginPage md-content {
    padding-bottom: 0px;
}

.password-error {
    color: #FF1100;
}

content-container iframe {
    width: 100%;
    height: 100%;
}

table.treetable td.loading span.indenter a {
    display: none;
}

table.treetable tr.collapsed span.indenter a {
    background-image: url('svg/plus.svg');
}

table.treetable tr.expanded span.indenter a {
    background-image: url('svg/minus.svg');
}

table.treetable tr.hasContent td,
table.treetable tr:not(.isLeaf) td {
    cursor: pointer;
}

table.treetable tr.isLeaf md-icon[md-svg-icon="info"] {
    cursor: pointer;
}

table.treetable td:not(.loading) svg {
    display: none;
}

md-dialog div.errors ul {
    padding-left: 5px;
}

div.errors {
    border: 1px solid;
    margin: 10px 0px;
    padding-left: 5px;
}

div.errors {
    color: #D8000C;
    background-color: #FFBABA;
}

div.loginPage div.errors ul {
    padding-left: 20px;
    padding-right: 10px;
}


/* Dialogs */

md-dialog md-content form {
    width: 100%;
}

md-dialog {
    min-width: 35%;
}


/* Spinner */

.spinner {
    -webkit-animation: rotator 1.4s linear infinite;
    animation: rotator 1.4s linear infinite;
}

@-webkit-keyframes rotator {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(270deg);
        transform: rotate(270deg);
    }
}

@keyframes rotator {
    0% {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    100% {
        -webkit-transform: rotate(270deg);
        transform: rotate(270deg);
    }
}

.path {
    stroke-dasharray: 187;
    stroke-dashoffset: 0;
    -webkit-transform-origin: center;
    -ms-transform-origin: center;
    transform-origin: center;
    -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
    animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
}

@-webkit-keyframes colors {
    0% {
        stroke: #4285F4;
    }
    25% {
        stroke: #DE3E35;
    }
    50% {
        stroke: #F7C223;
    }
    75% {
        stroke: #1B9A59;
    }
    100% {
        stroke: #4285F4;
    }
}

@keyframes colors {
    0% {
        stroke: #4285F4;
    }
    25% {
        stroke: #DE3E35;
    }
    50% {
        stroke: #F7C223;
    }
    75% {
        stroke: #1B9A59;
    }
    100% {
        stroke: #4285F4;
    }
}

@-webkit-keyframes dash {
    0% {
        stroke-dashoffset: 187;
    }
    50% {
        stroke-dashoffset: 46.75;
        -webkit-transform: rotate(135deg);
        transform: rotate(135deg);
    }
    100% {
        stroke-dashoffset: 187;
        -webkit-transform: rotate(450deg);
        transform: rotate(450deg);
    }
}

@keyframes dash {
    0% {
        stroke-dashoffset: 187;
    }
    50% {
        stroke-dashoffset: 46.75;
        -webkit-transform: rotate(135deg);
        transform: rotate(135deg);
    }
    100% {
        stroke-dashoffset: 187;
        -webkit-transform: rotate(450deg);
        transform: rotate(450deg);
    }
}

